samples/_failures_safe/1761129719_c5fd21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2067ef07.c: In function ‘main’:
./samples/SAFE/__tmp_2067ef07.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_2067ef07.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2067ef07.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2067ef07.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2067ef07.c:159:21: error: expected declaration or statement at end of input
